ionic setup sass

--- a/ionic_1x/caffeinehit-map/ionic.config.json
+++ b/ionic_1x/caffeinehit-map/ionic.config.json
@@ -1,4 +1,13 @@
 {
   "name": "caffeinehit-map",
-  "app_id": ""
+  "app_id": "",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
+  ]
 }
