--- a/nodejs/node-todo-api/package.json
+++ b/nodejs/node-todo-api/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "mongoose": "^4.11.10"
   },
   "devDependencies": {},
   "description": ""
