--- a/nodejs/node-todo-api/package.json
+++ b/nodejs/node-todo-api/package.json
@@ -8,6 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.10"
   },
