--- a/nodejs/node-todo-api/package.json
+++ b/nodejs/node-todo-api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,11 @@
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.10"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "expect": "^21.0.0",
+    "mocha": "^3.5.0",
+    "nodemon": "^1.11.0",
+    "supertest": "^3.0.0"
+  },
   "description": ""
 }
