--- a/nodejs/node-chat-app/package.json
+++ b/nodejs/node-chat-app/package.json
@@ -2,16 +2,23 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "",
-  "main": {
+  "main": "index.js",
+  "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node": "8.4.0"
+    "node": "8.5.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.5.3",
+    "nodemon": "^1.12.1"
   }
 }
