Add base project for firestore codelab

--- a/firebase/friendlyeats-web/firebase.json
+++ b/firebase/friendlyeats-web/firebase.json
@@ -3,6 +3,8 @@
     "public": "./",
     "ignore": [
       "firebase.json",
+      "firestore.rules",
+      "firestore.indexes.json",
       "database-rules.json",
       "storage.rules",
       "functions"
